--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,15 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs
+*.vsidx
+*.db
+*.ipch
+*.obj
+*.recipe
+*.ilk
+*.log
+*.tlog
+*.idb
+*.pdb
+*.exe
+.vs/Sec3Group5Game/v17/.suo
