--- a/Sec3Group5Game/Sec3Group5Game.vcxproj
+++ b/Sec3Group5Game/Sec3Group5Game.vcxproj
@@ -127,7 +127,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.c" />
+    <ClCompile Include="Loot.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="Map.c" />
+    <ClCompile Include="Player.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Loot.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
