Implemented functions in the enemies module and added functions too

--- a/Sec3Group5Game/Sec3Group5Game.vcxproj
+++ b/Sec3Group5Game/Sec3Group5Game.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Player.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Loot.h" />
     <ClInclude Include="main.h" />
