Added lootpool information files

--- a/Sec3Group5Game/Sec3Group5Game.vcxproj
+++ b/Sec3Group5Game/Sec3Group5Game.vcxproj
@@ -141,6 +141,11 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CastleLoot.txt" />
+    <Text Include="DungeonLoot.txt" />
+    <Text Include="FieldsLoot.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
