Added lootpool files added some loot functionality

--- a/Sec3Group5Game/Sec3Group5Game.vcxproj
+++ b/Sec3Group5Game/Sec3Group5Game.vcxproj
@@ -142,9 +142,9 @@
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="CastleLoot.txt" />
+    <Text Include="LavaCaveLoot.txt" />
     <Text Include="DungeonLoot.txt" />
-    <Text Include="FieldsLoot.txt" />
+    <Text Include="JungleLoot.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
