--- a/Sec3Group5Game/Sec3Group5Game.vcxproj
+++ b/Sec3Group5Game/Sec3Group5Game.vcxproj
@@ -142,6 +142,9 @@
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="EnemyAreaOne.txt" />
+    <Text Include="EnemyAreaThree.txt" />
+    <Text Include="EnemyAreaTwo.txt" />
     <Text Include="LavaCaveLoot.txt" />
     <Text Include="DungeonLoot.txt" />
     <Text Include="JungleLoot.txt" />
