Forgot to add name support in the Create<Item> OOPSIE

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 *.exe
+/.vs/Sec3Group5Game/FileContentIndex/0309a40d-2bb5-4a27-87ae-33c37e1a266e.vsidx
